syntax = "proto3";

package onight.zjfae.afront.gensazj.v2;

option java_outer_classname="Notices";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_notice{
	//
	message Notice{
		string uuid = 1;	 //,uuid,Long,不校验,是,
		string pageTitle = 2;	 //,页面标题,String,不校验,是,
		string noticeTitle = 3;	 //,公告标题,String,不校验,是,
		string noticeContent = 4;	 //,公告内容,Long,不校验,是,
		string type = 5;	 //,公告类型,Long,不校验,是,
		string status = 6;	 //,平台,Long,不校验,是,
		string id=7; //,承诺id,String,不校验,是
		string commitContent = 8;	 //,承诺函内容,Long,不校验,是,
		string buttonTitle=9; //,按钮标题,String,不校验，是,
		string isShow=10; //,是否线上,String,不校验，0线上，1线下
	}


	Notice notice = 1;


}

message Ret_PBAPP_notice{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_notice data=3;


}

message REQ_PBAPP_notice{
	//

	string type = 1; //,公告类型:0-高净值升级公告,String,不校验,否,
	
	string mobile = 2; //手机号,人脸识别协议签署专用,不校验,否,
	
	string bankName = 3; //,银行名称,String,不校验,否,
	
	string bankCard = 4; //,银行卡号,String,不校验,否,

	string certificateCode =5; //,身份证号,String,不校验,是,
}