syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="ProductHighTransferOrderList";
//Generated By BrewRobot:Wed Feb 22 17:54:13 CST 2017

message PBIFE_prdtransferquery_prdQueryHighWorthSpecialTransferOrderList{
	///ife/prdtransferquery/prdQueryTransferOrderListNew.html
	message IconsList{
		string iconsPosition = 1;	 //,图标具体方位,String,不校验,是,
		string uuid = 2;	 //,图标uuid,String,不校验,是,
	}

	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}

	message ProductTradeInfoList{
		string delegationId = 1;	 //,委托表PK,String,`,否,
		string delegationCode = 2;	 //,委托编号,String,不校验,否,产品编号+委托时间+6位编号
		string productCode = 3;	 //,产品代码,String,不校验,否,
		string productName = 4;	 //,产品名称,String,不校验,否,
		string delegateAmount = 5;	 //,委托金额,String,不校验,否,
		string delegateType = 6;	 //,委托类型,String,不校验,否,认购、协议卖出、定价卖出、定价买入
		string delegateNum = 7;	 //,委托单位,String,不校验,否,
		string tradeAccount = 8;	 //,交易账户,String,不校验,否,
		string expectedMaxAnnualRate = 9;	 //,预期年化收益率,String,不校验,否,
		string actualAnnualRate = 10;	 //,实际年化收益率,String,不校验,否,
		string targetRate = 11;	 //,参考收益率,String,不校验,否,
		string actualRate = 12;	 //,实际收益率,String,不校验,否,
		string nextPayDate = 13;	 //,下次确权日,String,不校验,否,
		string cutAmount = 14;	 //,每万元利息折让,String,不校验,否,
		string leftDays = 15;	 //,剩余天数,String,不校验,否,
		string orderBy = 16;	 //,排序,String,不校验,否,
		string transferObject = 17;	 //,交易对象,String,不校验,否,
		string buyerSmallestAmount = 18;	 //,最小购买金额,String,不校验,否,
		string deadLineList = 19;	 //,产品剩余期限查询条件,List,不校验,否,
		string expectedMaxAnnualRateList = 20;	 //,预期收益率查询条件,List,不校验,否,
		string riskLevelList = 21;	 //,风险等级查询条件,List,不校验,否,
		string subjectTypeList = 22;	 //,产品类型查询条件,List,不校验,否,
		string buyerSmallestAmountList = 23;	 //,起购金额查询条件,List,不校验,否,
		string saleObjectList = 24;	 //,销售对象查询条件,List,不校验,否,
		string isMyTransfer = 25;	 //,是否我的挂单,String,不校验,否,
		string canBuyNum = 26;	 //,可买人数,String,不校验,否,
		string holdersNum = 27;	 //,产品可够人数上限,String,不校验,否,
		string currencyNum = 28;	 //,产品当前持仓人数,String,不校验,否,
		string holdDayNum = 29;	 //,已存续天数,String,不校验,否,
		string manageEndDate = 30;	 //,管理期限结束时间,String,不校验,否,
		string ifAllBuy = 31;	 //,是否须一次全额购买,String,不校验,否,1-是;0-否
		string leastTranAmount = 32;	 //,最低转让份额,String,不校验,否,
		string unActualTransferUserLevel = 33;	 //,受让会员等级,String,不校验,否,
		string canUseKq = 34;	 //,是否可用卡劵,String,不校验,否,
		string riskLevel=35;//,风险级别,String,不校验,否,
		string productSpecialArea = 36;//,产品所属专区,String,不校验,否,00-募集;02-发行
		string sellingStatus = 37;	//,销售状态,String,不校验,是,0-敬请期待，1-售卖中，2-已售罄，3-已结束
		string isTransfer = 38;	 //,是否可转让 ,String,不校验,是,
		string iconsType = 39;	 //,可用卡劵图标类型 ,String,不校验,是,其中9999为无
		message IconsList{
			string iconsPosition = 1;		 //,图标具体方位,String,不校验,是,
			string uuid = 2;		 //,图标uuid,String,不校验,是,
		}

		repeated IconsList iconsList = 40;
		
	}


	PageInfo pageInfo = 1; //,转让产品列表,List,不校验,否,

	repeated ProductTradeInfoList productTradeInfoList = 2;

	string currTradeAccount = 3; //,当前登录账户交易账号,String,不校验,否,


}

message Ret_PBIFE_prdtransferquery_prdQueryHighWorthSpecialTransferOrderList{
	///ife/prdtransferquery/prdQueryTransferOrderListNew.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdtransferquery_prdQueryHighWorthSpecialTransferOrderList data=3;


}

message REQ_PBIFE_prdtransferquery_prdQueryHighWorthSpecialTransferOrderList{
	///ife/prdtransferquery/prdQueryTransferOrderListNew.html

	string versionNo = 1; //,版本号,String,不校验,是,

	string deadLineQuery = 2; //,剩余期限,String,不校验,是,

	string expectedMaxAnnualRateQuery = 3; //,预期收益率,String,不校验,是,

	string riskLevelQuery = 4; //,风险等级,String,不校验,是,

	string subjectTypeQuery = 5; //,产品类型,String,不校验,是,

	string buyerSmallestAmountQuery = 6; //,起购金额,String,不校验,是,

	string saleObjectQuery = 7; //,销售对象,String,不校验,是,

	string pageIndex = 8; //,当前页,String,不校验,是,默认1

	string pageSize = 9; //,页大小,String,不校验,是,默认10

	string delegateType = 10; //,委托类型,String,不校验,是,

	string productCode = 11; //,产品编号,String,不校验,是,

	string productName = 12; //,产品名,String,不校验,是,

	string orderBy = 13; //,排序列名,String,不校验,是,

	string orderAsc = 14; //,排序顺序,String,不校验,是,

	string uuids = 15; //,排序控件,String,不校验,是,用-分隔
	
	string availableAmountStart = 16;//,可购金额起,String,不校验，否,
	
	string availableAmountEnd = 17;//可够金额止,String,不校验,否,
	
	string specialQryType=18;//,专区查询类型,String,不校验,否,

	string quanDetailsId  = 19;//,卡券编号,String,不校验，否,
	
	string quanUsedProductCode  = 20;//核销产品编号,String,不校验,否,
	
	string quanUsedSeriesCode =21;//,核销系列编号,String,不校验,否,

}